# omni_rgbd_camera

./: CMakeLists.txt  package.xml
model/: OMNI_RGBD_CAMERA.body
src/: PointCloud.cpp  PointCloud.hpp  move_node.cpp  omni_rgbd_camera_node.cpp
